<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:padding="23dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:text="@string/sure_text"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/noButton"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/yesButton"
                android:layout_alignParentRight="true"
                android:layout_alignBottom="@+id/noButton"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>